--- a/src/index.css
+++ b/src/index.css
@@ -3,12 +3,9 @@
   height: 100vh;
   width: 100vw;
 }
-#root {
-  min-height: 100vh !important;
-}
 body {
   margin: 0;
-  min-width: 320px;
-  min-height: 100vh;
+  width: 100vw;
+  height: 100vh;
   background: linear-gradient(to right, #1B2D51 90%, #1D5F77 10%);
 }
