--- a/src/index.css
+++ b/src/index.css
@@ -1,9 +1,18 @@
+@import './assets/fonts/fonts.css';
+
 :root {
-  font-family: quicksand, sans-serif;
   height: 100vh;
   width: 100vw;
 }
+
+#root {
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+}
+
 body {
+  font-family: Quicksand, sans-serif;
   margin: 0;
   width: 100vw;
   height: 100vh;
